--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-UNITYCLOUD_KEY = abc123
-HOCKEYAPP_KEY = abc123
+UNITYCLOUD_KEY = 413eb6d43decac11c7d8bf80b56daae9
+HOCKEYAPP_KEY = e99876835642457384a83118621bc6eb
