--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "swagger-client": "^2.1.16",
-    "hipchatter":"^1.0.0",
+    // "hipchatter":"^1.0.0",
     "unitycloudbuild-client": "^0.1.6"
   },
   "devDependencies": {},
